feat: using docker volumes instead of local machine volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,8 @@ services:
     restart: always
     network_mode: host
     volumes:
-      - ~/docker-data/mongo/db:/data/db
+      - mongo_data:/data/db
+
+volumes:
+  mongo_data:
+    external: true
