--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,20 +15,10 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-flags: --debug
 
-      - name: Get Commit SHA
-        id: commit_sha
-        run: echo "COMMIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-
-      - name: Cache Docker layers
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+      - name: Get Git Commit SHA
+        id: git_sha
+        run: echo "GIT_SHA=$(git rev-parse HEAD)" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -41,14 +31,7 @@ jobs:
         with:
           context: .
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/scheduler:latest
-            ${{ secrets.DOCKER_USERNAME }}/scheduler:${{ env.COMMIT_SHA }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+            ${{ secrets.DOCKER_USERNAME }}/tx-stream:latest
+            ${{ secrets.DOCKER_USERNAME }}/tx-stream:${{ env.GIT_SHA }}
